      - reporting of missing parent data items;
      - the --allow-double-precision-notation and
        --no-allow-double-precision-notation options.
    - COD::AuthorNames:
      - author_names_are_the_same() subroutine.
    - COD::CIF::DDL::DDL1:
      - the get_list_constraint_type() and get_dic_item_value() subroutines.
  * Changed:
    - COD::CIF::Parser::Bison:
      - marking strings as UTF-8 using low-level Perl API to improve the
        performance.
    - cif_validate:
      - updated the range validation logic to always consider the standard
        uncertainty (s.u.) values even if the data item is not formally
        eligible to have an associated s.u. value.
    - cif_molecule:
      - replaced the term 'symmetry operator' with the term 'symmetry operation'
        in error messages dealing with symmetry.
    - COD::CIF::Data:
      - replaced the term 'symmetry operator' with the term 'symmetry operation'
        in error messages dealing with symmetry.
  * Fixed:
    - cif2cod:
      - escaping double quotes in 'text' fields in semicolon-separated
        output format.
    - cif_molecule:
      - removed duplicated option description.
    - cif_validate:
      - corrected the way character ranges are handled.

cod-tools (2.4)

  * Added:
    - COD::CIF::ChangeLog module.
    - COD::CIF::DDL module.
    - COD::CIF::DDL::DDL1 module.
    - COD::CIF::Tags::Manage:
      - accepting CIF format version number in new_datablock();
      - the 'contains_data_item()' subroutine.
    - data/replacement_values/replacement_values.lst
      - several more value replacement rules.
    - cif_tags_in_list:
      - the --exclude-category-names option;
    - cif_validate:
      - a validation message pertaining to quote usage in combination with
        numeric values;
      - a uniqueness constraint check for simple and composite loop references.
  * Changed:
    - COD::AuthorNames:
      - updated several error messages to only display the original author name