@@ -15,6 +15,11 @@ cod-tools (unreleased)
       - author_names_are_the_same() subroutine.
     - COD::CIF::DDL::DDL1:
       - the get_list_constraint_type() and get_dic_item_value() subroutines.
+    - COD::CIF::Data::AtomList:
+      - a warning about data items used in the construction of the atom
+        structure not residing in the same loop.
+    - COD::CIF::Tags::Manage:
+      - the get_item_loop_index() subroutine.
   * Changed:
     - COD::CIF::Parser::Bison:
       - marking strings as UTF-8 using low-level Perl API to improve the
